<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/graph_expand_image"
        app:srcCompat="@drawable/unfold_more"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/expElementMargin"
        />

    <ImageView
        android:id="@+id/graph_collapse_image"
        app:srcCompat="@drawable/unfold_less"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_margin="@dimen/expElementMargin"
        />

    <TextView
        android:id="@+id/graph_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/graph_label_start_margin"
        android:layout_toRightOf="@id/graph_expand_image"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <FrameLayout
        android:id="@+id/graph_frame"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/graph_label"
        android:layout_above="@id/graph_toolbar">
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:visibility="gone"
        android:id="@+id/graph_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroundExp"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/bottom_navigation_color"
        app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
        app:itemTextAppearanceInactive="@style/BottomNavigationView"
         />



</merge>
