...
        android:layout_alignParentStart="false"
        android:progressBackgroundTint="@android:color/transparent"
        android:layout_below="@+id/tab_layout" />

    <androidx.viewpager.widget.ViewPager
        android:layout_below="@id/tab_layout"
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:layout_width="wrap_content"
...
