...
    <string name="location">Location</string>
    <string name="sensorNotAvailableWarningTitle">Sensor not available.</string>
    <string name="sensorNotAvailableWarningText1">The sensor</string>
    <string name="sensorNotAvailableWarningText2">is not available. Usually this means, that your device simply does not have this type of sensor.</string>
    <string name="sensorNotAvailableWarningMoreInfo">More info</string>
    <string name="sensorNotAvailableWarningMoreInfoURL">http://phyphox.org/faq/#faqMissingSensor</string>
    <string name="ok">OK</string>
    <string name="tryagain">Try again</string>
    <string name="doContinue">Continue</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">unknown</string>
...
